# voice-transcribe

./: .gitignore  PLAN.md  README.md  pyproject.toml
src/test_repo/: voice.py
src/voice_transcribe/: audio.py  cli.py  config.py  index_cmd.py  llm.py  process_prompt.md  prompts.py  storage.py  stt.py  vector.py  voice.py
tests/: test_cli.py  test_index_cmd.py  test_prompts.py  test_storage.py  test_vector.py
