[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-transcribe"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "torch>=2.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "transformers>=4.40",
    "sentencepiece>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
voice = "voice_transcribe.voice:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
